syntax = "proto3";

option java_multiple_files = true;
option java_package = "webapp.tier.grpc";
option java_outer_classname = "WebappProto";

package grpc;

// The Id service definition.
service Id {
    // Sends a id
    rpc getId (IdRequest) returns (IdReply) {}
}

// The request id.
message IdRequest {
}

// The response message containing the id
message IdReply {
    uint32 id = 1;
}

// The Msg service definition.
service Msg {
    // Sends a message
    rpc getMsg (MsgRequest) returns (MsgReply) {}
}

// The request message.
message MsgRequest {
}

// The response message containing the message
message MsgReply {
    string message = 1;
}
